refactor: 인코딩 형식을 UTF-8로 지정